Update some posts on Java SE & Java Web & HTML

--- a/_posts/Java/JavaSE/2020-10-24-对象与类.md
+++ b/_posts/Java/JavaSE/2020-10-24-对象与类.md
@@ -775,7 +775,7 @@ System.out.println("The answer is " + ans); //The answer is 233
 
 ### 4.7.4 字符串转换为基本类型 与 包装类
 
-除了`Character`类之外，其他所有包装类都具有`parseXxx`静态方法可以将**字符串参数转换为对应的基本类型**：
+除了`Character`类之外，其他所有**包装类都具有**`parseXxx`静态方法可以将**字符串参数转换为对应的基本类型**：
 
 - `public static byte parseByte(String s)`：将字符串参数转换为对应的byte基本类型。
 
