--- a/_posts/Java/JavaWeb/2021-02-08-数据库连接池.md
+++ b/_posts/Java/JavaWeb/2021-02-08-数据库连接池.md
@@ -172,7 +172,7 @@ public class DruidByUtils {
 
 Spring 框架对 JDBC 进行了简单封装，提供了一个JDBCTemplate 对象简化了JDBC的开发。
 
->  ❗ 自定义的类的成员变量，必须与 SQL 中的列名称相同，如此，才能够使用 `queryForObject` 方法进行封装。
+>  ❗ 自定义的类的成员变量，必须与 SQL 中的列名称相同，如此，才能够使用 `queryForObject` 方法进行封装。
 
 ### 2.3.1 使用步骤
 
@@ -196,7 +196,23 @@ Spring 框架对 JDBC 进行了简单封装，提供了一个JDBCTemplate 对象
      query(sql, new BeanPropertyRowMapper<自定义类>(自定义类.class))
      ```
 
-   + `queryForObject()`：查询结果，并将结果封装为**对象**，常用于 聚合函数 的查询
+     > 注意，若返回结果为单个元素，则直接返回对象；若返回结果为多个元素，则会返回以该对象为类型的 `List` ，举例如下：
+   
+     ```java
+     List<User> users = template.query(sql, new BeanPropertyRowMapper<User>(User.class)); //其中sql="SELECT * FROM USER";
+     User user = template,queryForObject(sql, new BeanPropertyRowMapper<User>(User.class), username, userpassword); //其中 sql = "SELECT * FROM userlist WHERE username = ? AND password = ?";
+     ```
+   
+   + `queryForObject(String sql, Object[] args, Class<T> elementType)`：查询结果，并将结果封装为**对象**，常用于 聚合函数 的查询
+   
+     ```java
+     public int findTotalCount(){
+         String sql = "SELECT COUNT(*) FROM userlist";
+         return template.queryForObject(sql, Integer.class);
+     } //Integer 自动拆箱为 int
+     ```
+   
+     
 
 #### 简单使用举例（使用工具类 JdbcUtils ）
 
@@ -290,3 +306,41 @@ public class JdbcTemplateDemo2 {
 |                      `test6()` 运行结果                      |
 | :----------------------------------------------------------: |
 | <img src="https://gitee.com/j__strawhat/MyImages/raw/master/Snipaste_2021-02-09_17-27-05.png"/> |
+
+### 2.3.4 组合查询的技巧
+
+由于用户查询时，有可能不需要条件查询，有可能需要条件 1 查询，也有可能需要条件 2 查询 …
+
+为了更好地维护，可以这样写：
+
+1. 定义并初始化 sql 字符串及相应的 `StringBuilder`（因为可能存在大量的拼接操作，详见 JavaSE 笔记）。
+
+   ```java
+   String sql = "SELECT COUNT(*) FROM user WHERE 1 = 1 "; //这里的 "WHERE 1 = 1" 用得十分妙
+   StringBuilder strB = new StringBuilder(sql);
+   ```
+
+   
+
+2. 通过 HTTP 请求中携带的信息，获取条件查询的参数：
+
+   ```java
+   Map<String, String[]> conditions = request.getParameterMap();
+   Set<String> keySet = conditions.keySet();
+   List<Object> params = new ArrayList<Object>();
+   ```
+
+3. 遍历 `conditions`，查看每个元素的 `key` 是否存在 `value`，若有，则拼接到原来的 sql 字符串。格式统一，方便维护——`sql.append("AND ? LIKE ?");`
+
+   ```java
+   for(String key : keySet){
+       //根据key获取value
+       String[] value = condition.get(key)[0];
+       if(value != null && !"".equals(value)){
+           sb.append(" AND " + key + "LIKE ? ");
+           params.add("%" + value + "%");
+       }
+   }
+   ```
+
+   
