--- a/_posts/Web前端/2021-02-14-JS02.md
+++ b/_posts/Web前端/2021-02-14-JS02.md
@@ -155,10 +155,12 @@ math: true
 
  （七）表单事件：
 
-1. `onsubmit`：确认按钮被点击
+1. **`onsubmit`**：确认按钮被点击
 
    + 可以阻止表单的提交，从而对填写的表单进行校验
    + 当方法的返回值是 `false`，则阻止提交。
+
+   > 注意区分，`Form` 这一 DOM 对象有一**方法**（不是事件）：**`submit()`**，JS能够通过这一 DOM 对象的方法，将表单进行提交。
 
    ```html
    <!DOCTYPE html>
@@ -620,7 +622,7 @@ HTML DOM 模型被构造为**对象**的树：
 
 - JavaScript 能够改变页面中的所有 HTML 元素
 
-  + 通过 `innerHTML` 来修改标签体的值
+  + **通过 `innerHTML` 来修改标签体的值**
 
 - JavaScript 能够改变页面中的所有 HTML 属性
 
