Upload the post of Maven & update other posts

--- a/_posts/Java/JavaSE/2020-10-24-对象与类.md
+++ b/_posts/Java/JavaSE/2020-10-24-对象与类.md
@@ -675,6 +675,12 @@ str = str.substring(0, 3) + "ey!"; //Money!
 
 由于`==`，对于引用类型而言，是根据**地址值**比较的。这个运算符只能够确定两个字符串是否放置在同一位置上。而双引号括住的字符串在常量池当中，而`new`出来的字符串不在常量池中。
 
+```java
+String a = "abc";
+String b = "abc";
+boolean res = (a == b); //true，因为字符串a与b为同一常量池中
+```
+
 若确实需要字符串的内容进行比较可使用`equals`方法：
 
 `public boolean equals(Object obj); `：参数可以为任何对象，但只有参数为一个字符串并且内容相同（严格区分英文大小写）的才会返回`true`，否则返回`false`。
