--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -666,7 +666,7 @@ public class Message{
         if(args[0].equals("-h")) System.out.print("Hello,");
         else if(args[0].equals("-g")) System.out.print("Goodbye,"); 
         //打印命令行参数
-        for(int i = 1; i < args.length(); i++) 
+        for(int i = 1; i < args.length; i++) 
             System.out.print(" " + args[i]);
         System.out.println("!");
     }
