Update the details of some notes

--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -15,6 +15,48 @@ math: true
 
 # Chapter 1. 开发前言
 
+## 1.0 错误总结
+
++ `_int` 与 `$fred` 是合法的变量名
+
++ `Integer` 不是关键字
+
++ `classpath`  环境变量是指定 Java **类文件**所在的文件路径，在**运行** Java 程序时需要访问该环境变量。
+
++ 一个 Java 文件中只能有**一个** `public` 类。
+
++ 若文件中有不止一个类，此时文件名必须与 `public` 类名一致。若文件中不止一个类，且**没有 `public` 类**，则文件名可与任一类名一致。
+
++ Java是自动导入 `java.lang.*` 库
+
++ 定义 `main` 方法时若误将方法名写成 `Main`时，编译通过，但运行失败：`Exception in thread “main” java.lang.NosuchMethodError:main` 
+
+  > Java 解释器找不到 `main` 方法，对于 `Main` 方法，它只认为是一个普通方法，而非程序入口
+
++ `char`类型为`16`位（2个字节）
+
++ `Math.random()` 获取的是 $[0.0,1.0)$ 的随机数
+
++ `boolean` 类型的变量不能直接转换为 `int` 类型
+
++ 若要将一个值赋给另一个**范围较小**类型的变量，必须**显式地**进行类型转换。如下：
+
+  ```java
+  double d = 4.5;
+  int i = (int)d; //显示地类型转换
+  // 直接 int i = d; 会编译出错！
+  ```
+
+  但是，如果整型**直接量**是在目标变量允许的范围内，整型直接量赋给 `short` 或 `byte` 类型的变量时，可无需显示地类型转换：
+
+  ```java
+  short a = 5; //赋 整型直接量
+  a = a - 2; //编译错误!
+  a = (short)(a - 2); //正确写法
+  ```
+
+  
+
 ##  1.1 命令提示符(CMD)
 
 无图形界面、鼠标与光标。
