--- a/_posts/Java/JavaSE/2020-10-24-对象与类.md
+++ b/_posts/Java/JavaSE/2020-10-24-对象与类.md
@@ -233,7 +233,7 @@ methodParam(new Scanner(System.in)); //使用匿名对象来进行传参
 
 若类中的某个成员变量或方法用`static`关键字修饰，则以后创建的对象中的`static`修饰的变量或方法不再属于对象自己，而是属于类，也就说凡是本类的对象，都共享同一份。
 
-无论是成员变量，还是成员方法。若有了`static`修饰，都推荐使用类名称进行调用。
+无论是成员变量，还是成员方法。若有了`static`修饰，都推荐使用**类名称**进行调用。
 
 + `static`关键字修饰成员变量
 
