Update the colors & contents

--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -55,6 +55,60 @@ math: true
   a = (short)(a - 2); //正确写法
   ```
 
++ 字符串转换成数字：
+
+  ```java
+  String s1 = "23";
+  int intValue = Integer.parseInt(s1);
+  String s2 = "23.3";
+  double doubleValue = Double.parseDouble(s2);
+  ```
+
+  数字转换成字符串：
+
+  ```java
+  String s = number + "";
+  ```
+
++ 以数字0开头，由0~7组成的数是八进制。故下面这条语句是错误的。
+
+  ```java
+  int c = 08; //超出八进制所使用的数码
+  int d = '\u0FF'; //Unicode中的数字是十六进制
+  ```
+
++ 关于字符的ASCII码与Unicode编码的赋值：
+
+  ```java
+  char a = 65;
+  char b = '\u0041';
+  char c = 'A';
+  ```
+
++ 注意特殊字符的转义序列：
+
+  ```java
+  System.out.println("He said \"Java is fun\"");
+  //输出为：He said "Java is fun"
+  ```
+
++ 类中的静态方法不能直接调用 非静态成员变量 与 非静态方法。
+
+  ```java
+  public class WeekThreeHomework {
+      int p;
+      public void showString(){
+          System.out.println("This is a static method!");
+      }
+      public static void main(String[] args) {
+          //编译失败，静态方法不能使用非静态变量
+          System.out.println("This is a static number:" + p);
+          //静态方法不能访问非静态方法showString()方法
+          showString();
+      }
+  }
+  ```
+
   
 
 ##  1.1 命令提示符(CMD)
@@ -766,4 +820,4 @@ public class ArrayOne{
 }
 ```
 
-![image-20201022000648566](https://gitee.com/j__strawhat/MyImages/raw/master/image-20201022000648566.png)
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/image-20201022000648566.png" alt="image-20201022000648566" style="zoom:80%;" />
