--- a/_posts/OnlineJudge/牛客竞赛/2020-09-27-牛客小白月赛28.md
+++ b/_posts/OnlineJudge/牛客竞赛/2020-09-27-牛客小白月赛28.md
@@ -2,7 +2,7 @@
 title: 牛客小白月赛#28 题解
 author: JoyDee
 categories: [Online Judge, 牛客算法竞赛]
-tags: [Cpp, 算法-逆元, 算法-快速幂, 算法-博弈论, 思维-打表, 算法-递归与分治, 算法-位运算, 算法-三分思想, STL-bitset, 算法-KMP, 算法-DP, 算法-单源最短路径, 算法-并查集]
+tags: [Cpp, 算法-逆元, 算法-快速幂, 算法-博弈论, 思维-性质观察, 算法-递归与分治, 算法-位运算, 算法-三分思想, STL-bitset, 算法-KMP, 算法-DP, 算法-单源最短路径, 算法-并查集]
 date: 2020-09-27 00:31:00 +0800
 math: true
 ---
