--- a/_posts/其他知识技术分享/2021-01-05-电基.md
+++ b/_posts/其他知识技术分享/2021-01-05-电基.md
@@ -1,7 +1,7 @@
 ---
 title: 电基&模电简答题复习
 author: JoyDee
-categories: [其他知识技术分享, 电子与电工学]
+categories: [其他知识技术分享, 计算机电路基础]
 tags: [电路, 模电]
 math: true
 ---
