Update the post on Java & add Chinese characters on pannel

--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -109,6 +109,115 @@ math: true
   }
   ```
 
++ 方法的重载与方法的返回值类型、**修饰符**（如 `public`、`private`）等没有关系。
+
++ 对于有返回值的方法，return 语句是必需的。如下所示，最后的语句应该是 `else` 子句，而不是 `else if` 子句，否则会出现编译出错：
+
+  ```java
+  public static int sign(int n){
+      if(n > 0) return 1;
+      else if(n = 0) return 0;
+      else return -1;
+      //最后一句不能写成，else if(n < 0) return -1;
+  }
+  ```
+
++ Java对方法采用的都是值传递。有三种情况：
+
+  + 一个方法不能修改一个基本数据类型的参数
+  + 一个方法可以改变一个对象参数的状态
+  + 一个方法不能让对象参数引用一个新的对象
+  
++ 匿名数组应该如下使用：
+
+  ```java
+  PrintArray(new int[]{1,2,3,4});
+  ```
+
++ 在方法声明的时候，只能给方法中指定一个**可变长参数**，且在参数列表中必须是**最后一个**参数。
+
+  ```java
+  void method(int p1, double p2, String...p3){
+      //....
+  }
+  void method2(double...numbers){
+      //...
+  }
+  
+  ```
+
++ 可以在命令行中为 `main` 方法传递 `String[]` 类型的参数
+
+  ```shell
+  $java Test "+" 3 "abc" 2
+  # 在main方法中，args[2]="abc"
+  ```
+
++ 数组有两种初始化方式：
+
+  + 动态初始化：
+
+    ```java
+    char[] a = new char[5];
+    int len = 10;
+    char[] b = new char[len];
+    ```
+
+  + 静态初始化：
+
+    ```java
+    char[] a = new char[]{'a', 'b', 'c'};
+    /* 等价于 */
+    char[] a = {'a', 'b', 'c'};
+    
+    char[] b;
+    b = {'a', 'b'}; //错误!!!简化的静态初始化不能够分开写
+    ```
+
++ 当创建数组时，它的元素会被赋予默认值，数值型基本数据类型的默认值为0，`char` 型的默认值为 `\u0000`，`boolean` 型的默认值为 `false`。
+
+  ```java
+  float[] f1, f2;
+  f1 = new float[10];
+  f2 = f1;
+  //此时f2[0]的值为0.0
+  ```
+
++ 注意对 `final` 修饰符的使用：
+
+  ```java
+  final int[] x = {1, 2, 3, 4};
+  int[] y = x;
+  x[0] = 4;
+  x[2] = 5; //该数组允许修改其元素的值
+  x = new int[2]; //编译错误!!!由于x已被final修饰，不能再让它指向另一不同的数组
+  ```
+
+  ```java
+  package JoyDee;
+  
+  import java.util.Scanner;
+  
+  public class ExpThree {
+      int maxe;
+      ExpThree(){
+          maxe = 233;
+          System.out.println(maxe);
+      }
+      ExpThree(int i){
+          maxe = i;
+          System.out.println(maxe);
+      }
+      public static void main(String[] args) {
+  
+          ExpThree a = new ExpThree();
+          ExpThree b = new ExpThree(23);
+      }
+  
+  }
+  
+  ```
+
   
 
 ##  1.1 命令提示符(CMD)
