--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -183,6 +183,8 @@ math: true
   //此时f2[0]的值为0.0
   ```
 
++ 同样地，若构造方法中没有显式地给对象的数据域赋值，那么系统会自动地为它们赋为默认值。
+
 + 注意对 `final` 修饰符的使用：
 
   ```java
@@ -217,6 +219,55 @@ math: true
   }
   
   ```
+
++ 初始化块（修饰符为 `static`）是构造方法的补充，总是在**构造方法之前**执行（一个对象只能执行一次）。
+
++ 对象初始化的顺序：
+
+  1. 当Java创建一个对象时，系统先为该对象的所有实例属性分配内存(前提是该类已经被加载)，接着程序开始对这些实例属性执行初始化
+  2. 所有的数据域被初始化为默认值
+  3. 按照在类声明中出现的顺序，依次执行所有域初始化语句和**初始化块**
+  4. 执行构造方法的主体
+
++ Java 垃圾回收的工作原理：
+
+  + 若一个对象被赋为**空引用**或没有使用，就成为 `garbage` 回收的候选者；如下：
+
+    ```java
+    String s1 = new String("hello");
+    String s2 = new String("good");
+    s1 = s2; //此时字符串对象"hello"符合垃圾收集条件
+    ```
+
+    > 准确地来说，当没有任何活的线程能够访问一个对象时，该对象就符合垃圾收集条件。凭借此，程序员可以指定垃圾回收器回收对象。
+
+  + 垃圾回收程序并不会马上回收该对象，而是在 JVM 探测出应用程序的内存不足的时候，或者是在 JVM 闲置时才进行回收；
+
+    > 垃圾回收器**不能保证有足够的的内存**（无法保证 Java 程序从不产生内存溢出），它只能保证可用内存尽可能得到高效管理。
+
+  你可在 Java 程序**请求** （建议）JVM 运行垃圾收集器，如：
+
+  ```java
+  Runtime rt = Runtime.getRuntime();
+  rt.gc();
+  ```
+
+  另外，`finalize()` 方法（继承自 `Object`），能够在对象刚要被**垃圾收集删除之前**运行一些代码
+
+  > 调用 `finalize()` 实际上能够导致对象免于被删除，比如说，在 `finalize()` 方法内可以编写代码把一个对象传递给另一个对象，
+  > 能够有效地阻止该对象符合垃圾收集条件。
+
+  但是，任何情况下都**无法强迫**垃圾回收器立即执行回收操作，同样地，任何指定对象的 `finalize()` 方法可能运行，但是**不能指望**它。
+
++ Java 虚拟机内存模型：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210409001601.png" style="zoom:67%;" />
+
+  **方法区和 Java 堆** 是所有线程共享的数据区，其他均为线程私有的。
+
++ Java 堆：几乎所有的**对象和数组**都是在堆中分配空间的。Java堆分为新生代和老年代连个部分，新生代用于存放刚刚产生的对象和年轻的对象，如果对象一直都没回收，生存得足够长，老年对象就会被移入到老年代。
+
+  <img src="C:\Users\luffy\AppData\Roaming\Typora\typora-user-images\image-20210409001841386.png" alt="image-20210409001841386" style="zoom:67%;" />
 
   
 
