Update the recently notes

--- a/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
+++ b/_posts/Java/JavaSE/2020-10-18-开发前言与环境搭建、基础语法.md
@@ -35,6 +35,15 @@ math: true
 
 + `char`类型为`16`位（2个字节）
 
++ 注意 `float` 、`long` 的定义：
+
+  ```java
+  float a = 1;
+  float b = 1.0f;
+  long c = 9977997;
+  long d = 2L;
+  ```
+
 + `Math.random()` 获取的是 $[0.0,1.0)$ 的随机数
 
 + `boolean` 类型的变量不能直接转换为 `int` 类型
@@ -70,11 +79,12 @@ math: true
   String s = number + "";
   ```
 
-+ 以数字0开头，由0~7组成的数是八进制。故下面这条语句是错误的。
++ 以数字0开头，由0~7组成的数是八进制。故下面这条语句是**错误**的。
 
   ```java
   int c = 08; //超出八进制所使用的数码
   int d = '\u0FF'; //Unicode中的数字是十六进制
+  int e = '\u00FF'; //允许
   ```
 
 + 关于字符的ASCII码与Unicode编码的赋值：
@@ -257,7 +267,7 @@ math: true
   > 调用 `finalize()` 实际上能够导致对象免于被删除，比如说，在 `finalize()` 方法内可以编写代码把一个对象传递给另一个对象，
   > 能够有效地阻止该对象符合垃圾收集条件。
 
-  但是，任何情况下都**无法强迫**垃圾回收器立即执行回收操作，同样地，任何指定对象的 `finalize()` 方法可能运行，但是**不能指望**它。
+  但是，任何情况下都**无法强迫**垃圾回收器立即执行回收操作，同样地，任何指定对象的 `finalize()` 方法可能运行，但是**不能指望**它。
 
 + Java 虚拟机内存模型：
 
@@ -269,7 +279,38 @@ math: true
 
   <img src="C:\Users\luffy\AppData\Roaming\Typora\typora-user-images\image-20210409001841386.png" alt="image-20210409001841386" style="zoom:67%;" />
 
-  
++ `default` 包权限，同一包下
+
++ 类属性是在类加载时（第一次出现该类，故只会调用一次）初始化
+
++ 类加载->static->实例初始化块->构造方法
+
++ 数据封装的优点围绕于“隐藏”、“暴露”。
+
++ 对象数组实际上是引用变量的数组
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210422141212.png"/>
+
++ 一个类是不变类，必须满足如下条件：
+
+  + 所有的数据域都是私有的；
+  + 没有修改器
+  + 没有一个**返回指向可变数据域的引用**的访问器方法
+
++ `this`可以在**构造方法内部**用于调用同一个类其他的构造方法，且放在方法内的**第一行**（否则出现编译错误）
+
+  ```java
+  A(int a, int b){
+      this(a, b, 0);
+  }
+  A(int a, int b, int c){
+      //...
+  }
+  ```
+
++ 子类的构造方法若不显式调用父类的构造，则会调用父类的无参构造方法
+
+  ![image-20210510091444251](C:\Users\luffy\AppData\Roaming\Typora\typora-user-images\image-20210510091444251.png)
 
 ##  1.1 命令提示符(CMD)
 
