--- a/_posts/Web前端/2021-02-10-JS1.md
+++ b/_posts/Web前端/2021-02-10-JS1.md
@@ -97,7 +97,9 @@ var myName;
 let myAge;
 ```
 
-> 变量的声明可以不使用关键字，此时声明的变量是全局变量；而使用 `var` 修饰的变量，则是局部变量。
+> 变量的声明可以不使用关键字，此时声明的变量是全局变量；关于 `let` 与 `var` 的作用域规则，参见：https://www.runoob.com/js/js-variables.html
+>
+> 如果已经被声明（即已经存在），那么重复声明（即除了变量的非首次声明）会被跳过，不再执行声明的操作。
 
 上面两个变量声明后，没有数值，是个空的容器（ `undefined`），若需要为变量赋值进行初始化，使用等号 `=`
 
@@ -525,7 +527,7 @@ var reg = /正则表达式/;
 
 + `isNaN()`：判断一个值 是否 为 `NaN`。
 
-  > 由于 `NaN` “六亲不认”，但凡用 `NaN` 与 其他值 进行`==` 比较都会返回 `false` 。
+  > 由于 `NaN` “六亲不认”，但凡用 `NaN` 与 其他值 进行`==` 比较都会返回 `false` 。
 
 + `eval()`：传入字符串，并将该字符串作为 JS 代码来执行。
 
