--- a/_posts/随笔杂谈与感悟/2021-01-25-2021年杂言碎语.md
+++ b/_posts/随笔杂谈与感悟/2021-01-25-2021年杂言碎语.md
@@ -7,6 +7,14 @@ tags: [感悟, 杂谈]
 math: true
 ---
 
+## 四月
+
+### 04/17
+
+LeetCode 100题纪念~
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210417232507.png" style="zoom: 67%;" />
+
 ## 二月
 
 ### 02/02
@@ -16,7 +24,6 @@ math: true
 怀着忐忑心理测了下速度，这速度飞跃看下图，Vercel yyds!
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210206131317.png"/>
-
 
 ### 02/01
 
