Update the note of Digit Circuit

--- a/_posts/其他知识技术分享/2021-05-26-数电.md
+++ b/_posts/其他知识技术分享/2021-05-26-数电.md
@@ -72,18 +72,20 @@ math: true
 
 ## Chap 3. 门电路
 
+半导体三极管作为开关元件时工作在**饱和**状态和**截止**状态。
+
 三态门的输出有三个状态：高电平、低电平、高阻态。
 
 **集电极开路**与非门（OC）门：
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210526213859.png"/>
 
-在TTL电路中，OC门是可直接相连完成**线与逻辑**功能的门电路。
+在TTL电路中，OC门是可直接相连完成**线与**逻辑功能的门电路。（CMOS的OD门同理）
 
 | 集成门电路               | 输出结构门电路 | 缺点         | 优点                                                         |
 | ------------------------ | -------------- | ------------ | ------------------------------------------------------------ |
 | TTL（三极管-三极管逻辑） | OC门           | 功耗大       | 开关速度高，抗干扰能力强，带负载的能力强                     |
-| CMOS                     | OD门           | 工作速度稍低 | 制造工艺简单、功耗小、输入阻抗高、集成度高、电源电压范围宽等 |
+| CMOS（简称为HC）         | OD门           | 工作速度稍低 | 制造工艺简单、**功耗小**、输入阻抗高、**集成度高**、电源电压范围宽等 |
 
 对于TTL门电路，输入电压小于0.4V，或者阻值小于0.7K欧，相当于接**低电平**；输入电压大于2.4V，相当于接高电平。
 
@@ -110,6 +112,8 @@ math: true
 | 全加器           | 74HC183 |
 
 ### 一、编码器
+
+**逻辑功能**：将输入的每一个高、低电平信号编成一个对应的二进制代码。（译码器反之）
 
 普通编码器
 
@@ -153,6 +157,8 @@ math: true
 
 双4选1数据选择器74HC153
 
+**逻辑功能**：根据给定的输入地址代码，从一组输入信号中选出指定的一个送至输出端
+
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210527195318.png" style="zoom: 67%;" />
 
 ###  四、竞争与冒险
@@ -162,7 +168,15 @@ math: true
 
 + 消除竞争-冒险的方法：接入滤波电容、引入选通脉冲、修改逻辑设计。
 
+## Chap 5. 触发器
+
+触发器的**空翻**：在CP有效期间，若同步触发器的输入信号发生多次变化时，其输出状态也会相应产生多次变化。
+
 ## Chap 6. 时序逻辑电路
+
+基本单元：触发器
+
+时序逻辑电路通常包含组合电路和存储电路
 
 按**输出信号特点分类**：
 
@@ -214,6 +228,8 @@ math: true
 ### Verilog
 
 **零、**模板
+
+> 设计
 
 > 设计具有异步清零端的上升沿触发的T触发器
 
