Update the posts on Java & Marxism

--- a/_posts/Java/JavaSE/2008-06-06-Java易错归纳.md
+++ b/_posts/Java/JavaSE/2008-06-06-Java易错归纳.md
@@ -214,13 +214,53 @@ math: true
 
   暂时咕咕咕（P152）
 
+# Chapter 10. 面向对象的思考
+
+## 类之间的关系
+
+1. **依赖**：A访问B的属性或方法，或者类A负责实例化类B
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615160502.png" style="zoom:67%;" />
+
+2. **关联**：A能够对B做什么
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615161544.png" style="zoom:67%;" />
+
+   牢记下面这张图：
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615162452.png" style="zoom:67%;" />
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615162931.png" style="zoom:67%;" />
+
+   > 关联关系和聚集关系统称为组合。
+   >
+   > <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615164755.png" style="zoom:67%;" />
+
+   + **聚集**（has-a）：关联的特殊形式，一个对象可被多个其他聚集对象所拥有
+
+     <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615163255.png" style="zoom:67%;" />
+
+   + **组成**（Composition）：聚合的加强形式，一个对象只归属于一个聚集对象。整体与部分的关系，部分不能离开整体而单独存在
+
+     <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615163808.png" style="zoom:67%;" />
+
+3. 泛化：一种继承关系。
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615165631.png" style="zoom:67%;" />
+
+4. 实现：一种类与接口的关系
+
+   <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615165822.png" style="zoom:67%;" />
+
+
+
 # Chapter 11. 继承和多态
 
 OOP语言的三个典型特征：封装、继承、**多态**
 
 ## super 调用父类的构造方法
 
-+ 父类的构造方法不能够被子类继承，若要调用父类构造方法，必须使用关键字 `super` ，且必须放在构造方法的**第一行**。
++ 注意：**父类的构造方法不能够被子类继承**，若要调用父类构造方法，必须使用关键字 `super` ，且必须放在构造方法的**第一行**。
 
 + 若子类没有显式地使用 `super` ，则父类**无参**构造方法将被自动地执行。
 
@@ -433,6 +473,129 @@ public final class Math{...}
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210609200133.png" style="zoom:80%;" />
 
+# Chapter 12. 异常
+
+## 异常分类图
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615142708.png" style="zoom:80%;" />
+
++ `Error` 类以及子类表示程序本身无法修复，编译器不会检查他们，其错误一般由Java虚拟机抛出，此时程序就会被终止。
+
+  > 一般不会通过继承 `Error` 类来创建用户自定义的错误类
+
++ `RuntimeException` **运行时异常（免检异常）**：当出现这类异常，**即便没有捕获或者抛出，也会编译通过**。一旦出错，则建议终止程序，如：
+
+  > 通常是执行了错误操作，需要改进程序设计
+
+  ```java
+  int[] arr = {1, 2, 3};
+  System.out.println(arr[4]);
+  //Exception in thread "main" java.lang.ArrayIndexOutOfBoundsException ...
+  ```
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615145822.png" style="zoom:67%;" />
+
++ 其他 `Exception` 类以及子类均属于**编译时异常（受检异常）**，即Java编译器会检查它，当程序中可能出现这类异常时，要么用 `try-catch` 语句捕获，要么用 `throws` 子句声明抛出，否则编译不会通过
+
+  > 通常是能够被修复的，不会导致整个程序的终止
+
+## 异常跟踪栈
+
+异常跟踪栈与“方法调用栈”方向相反，异常先从**发生异常的方法**逐渐向外传播，首先传给该方法的调用者，然后再向上传…直至最后传给 `main` 方法。
+
+> 若 `main` 依然没有处理异常，则JVM会中止该程序，并打印异常的跟踪栈。
+
+```java
+class SelfException extends Exception{
+    public SelfException() {
+    }
+    public SelfException(String message) {
+        super(message);
+    }
+}
+public class Test {
+    public static void main(String[] args) throws SelfException{
+        firstMethod();
+    }
+    public static void firstMethod() throws SelfException{
+        secondMethod();
+    }
+    public static void secondMethod() throws SelfException{
+        thirdMethod();
+    }
+    public static void thirdMethod() throws SelfException{
+        throw new SelfException("我是异常，来自thirdMethod");
+    }
+}
+```
+
+结果显示如下：
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615114405.png" style="zoom: 80%;" />
+
+## 异常处理方式
+
+①声明一个异常；②抛出一个异常；③捕获一个异常
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615144548.png" style="zoom: 67%;" />
+
++ `throws` 声明**可能**会出现的异常，若 `main` 方法不知道如何处理，则可以使用 `throws` 声明抛出给 JVM 进行处理——打印异常跟踪栈，终止程序运行。
+
++ 若 `try` 块被执行一次，则 `try` 块后只有一个 `catch` 块会被执行（除非使用循环）
+
++ 若存在 `try` 块时，**总会**执行 `finally` 块
+
+  ```java
+  public class Test {
+      public static void main(String[] args) {
+          try{
+              throw new IOException();
+          } catch (IOException e){
+              System.out.println("1111"); 
+          } finally {
+              System.out.println("2222");
+          }
+          System.out.println("3333");
+      }
+  }
+  //输出：
+  //1111
+  //2222
+  //3333
+  ```
+
++ **注意**：`finally` 语句不被执行的唯一情况是先执行了用于终止程序（终止当前Java虚拟机进程）的 `System.exit()` 方法。
+
+  即便在 `try` 或 `catch` 代码块中的 `return` 语句时，只要有 `finally` 代码块，都会执行。
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615151514.png" style="zoom: 67%;" />
+
+  再注意，`finally` 代码块不能通过重新给变量赋值的方式来改变 `return ` 语句的**返回值**
+
+  ```java
+  public class Test {
+      private static int x = 2;
+      public static void main(String[] args) throws Exception {
+          System.out.println(woc()); //i = 1
+          System.out.println(x); //x = 3
+      }
+      public static int woc(){
+          int i = 1;
+          try{
+              throw new IOException();
+          }catch (IOException e){
+              return i;
+          }finally {
+              ++i;
+              x++;
+              System.out.println("In the final block: " + i); //i = 2
+          }
+      }
+  }
+  ```
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615152507.png"/>
+
 # Chapter 13. 抽象类和接口
 
 ## 抽象类定义
@@ -463,7 +626,7 @@ abstract class 类名 {
 此外：
 
 + 对于类或者方法的修饰， `final` 与 `abstract` 不能够同时使用
-+ 对于方法， `static` 与 `abstract` 不能够同时使用
++ 对于方法， `static` 与 `abstract` 不能够同时使用
 + 对于方法，`private` 与 `abstract` 不能够同时使用
 
 ## 接口定义
@@ -540,7 +703,7 @@ public interface Cloneable {
 
 类只有当**实现了 `Cloneable` 接口**（即标记为可复制的），其对象内部才能够**使用 `Object` 类**中定义的 `clone` 方法实现克隆功能。
 
-> 若没有实现该接口，就调用 `Object` 的 `clone()` 会抛出异常
+> 若没有实现该接口，就调用 `Object` 的 `clone()` 会抛出异常
 
 该方法如下：
 
@@ -548,7 +711,7 @@ public interface Cloneable {
 protected native Object clone() throws CloneNotSupportedException;
 ```
 
-> 由于是 `protected` ，只能在实现该接口的对象的方法内部调用，并且需要对该方法进行覆盖。如下调用。
+> 由于是 `protected` ，只能在实现该接口的对象的方法内部调用，并且需要对该方法进行覆盖。如下调用。
 
 ```java
 public class Test {
@@ -604,3 +767,4 @@ class Fa implements Cloneable{
 可以理解为，若一个类继承了另一个类，两者的行为应该是一致的。子类不能添加任何父类没有的**附加约束**（比如正方形在设置长度或宽度时要受到长宽相等的约束）。
 
 若违背该原则，应该将两个类共有属性及方法提炼出来作为抽象父类，各自继承父类并重写属于自己的方法
+
