--- a/_posts/Java/JavaSE/2020-10-31-异常 .md
+++ b/_posts/Java/JavaSE/2020-10-31-异常 .md
@@ -17,7 +17,7 @@ math: true
 
 如下的UML图关于异常的**继承结构**，异常的根类为`java.lang.Throwable`（顾名思义，所有异常均可抛出），其下有两个子类：`java.lang.Error` 与 `java.lang.Exception`。而我们平常所说的异常指的是后者。
 
-<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20201031161138.png"/>
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615142708.png" style="zoom:80%;" />
 
 + 错误（*Error*）：Java程序运行过程中若发生错误，则无法恢复，只能够退出。
 + 编译时异常（*CheckException*，或称**受控异常**、检查异常）：出现了这种类型的异常必须显式地**处理**，若不处理则Java程序将无法编译通过。
