Update the posts on Java & Marxism

--- a/_posts/Java/JavaSE/2008-06-06-Java易错归纳.md
+++ b/_posts/Java/JavaSE/2008-06-06-Java易错归纳.md
@@ -252,6 +252,71 @@ math: true
 
    <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210615165822.png" style="zoom:67%;" />
 
+## 包装类
+
++ `char` 的包装类为 `Character`；`int` 的包装类为 `Integer`
+
++ 包装类没有无参数构造方法，所有的包装类的实例都是**不可变**的。
+
+  > 注意，包装类一定有 `String` 的有参构造方法，另一有参构造方法的参数是它对应的基本数据类型，如下：
+  >
+  > ```java
+  > Byte b = new Byte((byte) 123);
+  > Byte c = new Byte(123); //错误!!Byte没有Byte(int)的有参构造方法
+  > ```
+
+  ```java
+  Integer x = new Integer(23); //Integer(int value)
+  Integer y = new Integer("23")//Integer(String s) 
+  Integer z = Integer.valueOf(233); //static方法：valueOf(int x)
+  Integer q = Integer.valueOf("233"); //static方法，传入String参数
+  
+  int w = y.intValue(); //Integer转换为int基本类型
+  double v = y.doubleValue(); //Integer转换为double基本类型
+  int bit16 = Integer.parseInt("-FF", 16); //第二个参数是进制，returns -255
+  ```
+
+  坑点：
+
+  ```java
+  Integer i = Integer.parseInt("23", 8); //正确，自动装箱
+  Double d = new Double(); //错误，没有无参构造方法
+  double j = (Double.valueOf("23.4")).intValue(); //正确，强制类型转换
+  double f = (Double.valueOf("23.4")).toString(); //错误
+  ```
+
++ 装箱一般发生在赋值和方法调用中
+
+  > 编译器在生成类的字节码时，插入必要的方法调用，虚拟机只是执行这些字节码
+
+  ```java
+  Integer x = 3 + new Integer(5); //正确
+  Integer y = 3.0 //错误，double不可能自动装箱为Integer，需要强制转换
+  
+  double z = 3.4;
+  System.out.println(z.intValue()); //错误，基本类型不可能调用包装类的方法
+  
+  Integer x = new Integer(2);
+  Integer y = new Integer(3);
+  System.out.println(x * y); //6
+  System.out.println(x.floatValue()); //2.0
+  ```
+
++ 包装类型的比较一定要使用 `equals` ，使用 `==` 比较两个包装对象，取决于是否值在 -128 到 127
+
+  ```java
+  Integer a = 9999;
+  Integer b = 9999;
+  System.out.println(a.equals(b)); //true
+  System.out.println(a == 9999); //true
+  ```
+
+## String
+
++ 由于 `String` 是引用对象类型，故其对象存储的并非是字符串的值，而是它的对象引用
+
+
+
 
 
 # Chapter 11. 继承和多态
@@ -481,7 +546,7 @@ public final class Math{...}
 
 + `Error` 类以及子类表示程序本身无法修复，编译器不会检查他们，其错误一般由Java虚拟机抛出，此时程序就会被终止。
 
-  > 一般不会通过继承 `Error` 类来创建用户自定义的错误类
+  > 一般不会通过继承 `Error` 类来创建用户自定义的错误类
 
 + `RuntimeException` **运行时异常（免检异常）**：当出现这类异常，**即便没有捕获或者抛出，也会编译通过**。一旦出错，则建议终止程序，如：
 
@@ -503,7 +568,7 @@ public final class Math{...}
 
 异常跟踪栈与“方法调用栈”方向相反，异常先从**发生异常的方法**逐渐向外传播，首先传给该方法的调用者，然后再向上传…直至最后传给 `main` 方法。
 
-> 若 `main` 依然没有处理异常，则JVM会中止该程序，并打印异常的跟踪栈。
+> 若 `main` 依然没有处理异常，则JVM会中止该程序，并打印异常的跟踪栈。
 
 ```java
 class SelfException extends Exception{
