--- a/_posts/人文社科/2021-06-13-马原复习.md
+++ b/_posts/人文社科/2021-06-13-马原复习.md
@@ -149,7 +149,7 @@ math: true
 
 ### 实践是自然存在和社会存在区分和统一的基础
 
-社会生活的本质：实践
+**社会生活的本质**：实践
 
 + 实践是物质世界分化为自然界和人类社会的前提，又是使自然界与…统一起来的现实基础
 + 实践是人类社会的基础，是理解和解释一切社会现象的钥匙
@@ -166,5 +166,30 @@ math: true
   >
   > 实践不是社会发展的动力！
 
+## 意识的起源、本质和作用
 
++ 意识的**概念**：意识是物质世界长期发展的产物，是人脑的机能和属性，是**物质世界的主观映象**。
++ 意识的**本质**：客观世界的主观映像，是客观内容和主观形式的统一。
 
++ 意识的**来源**：
+
+  1. 由一切物质所具有的反应特性到低等生物的刺激感应性；
+
+  2. 再到高等动物的感觉和心理；
+
+  3. 最终发展为人类的意识；
+
+     > 由此，意识的人独有的
+
++ 意识形成过程中的影响因素：
+
+  …. 社会实践特别是**劳动** … 决定性作用
+
+  …. 语言 … 促进作用，**语言**还是意识的**物质**外壳（注意区分，语言的含义是意识 ）
+
++ ⭐**意识的作用**：能动作用，主要表现在：
+
+  1. 意识反映世界具有自觉性，具有目的性和计划性
+  2. 意识具有**创造性**
+  3. 意识具有指导实践改造客观世界的作用。
+  4. 意识还具有指导、控制人的行为和生理活动的作用 
