Update the posts on Java & Marxism

--- a/_posts/Java/JavaSE/2008-06-06-Java易错归纳.md
+++ b/_posts/Java/JavaSE/2008-06-06-Java易错归纳.md
@@ -7,6 +7,8 @@ date: 2008-06-06 21:04:00 +0800
 math: true
 ---
 
+# Chapter 1. 
+
 # Chapter9. 对象和类
 
 + 对象通过引用变量访问，该变量包含对象的**引用地址**
@@ -42,10 +44,10 @@ math: true
 
   ```java
   public class Test {
-      { //第二个执行
+      { //第二个执行（每创建一个对象，就）
           System.out.println("init-block");
       }
-      static { //第一个执行
+      static { //第一个执行（每个类只执行一次）
           System.out.println("static");
       }
       public Test() { //第三个执行
@@ -313,11 +315,63 @@ math: true
 
 ## String
 
-+ 由于 `String` 是引用对象类型，故其对象存储的并非是字符串的值，而是它的对象引用
++ 由于 `String` 是引用对象类型，故其对象存储的并非是字符串的值，而是它的对象引用
 
++ 注意
 
+  ```java
+  String x = "Java";
+  x = x.concat("Rules!");
+  x.toLowerCase(); //ignored
+  System.out.println(x); //JavaRules!
+  ```
 
++ 当编译器遇到 `String` 常量时，会先检查该池内是否已存在相同的，若有就将新的引用**指向现有**的 `String` ，它们会在内存中共享同一块地址。
 
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210616195226.png" style="zoom:67%;" />
+
++ 检查一个字符串既不是 `null` ，也不是空串。
+
+  ```java
+  if(str.length() != 0 && str != null)
+  ```
+
++ 字符串转换为数组：
+
+  ```java
+  char[] chars = "Java".toCharArray();
+  ```
+
+  数组转换为字符串：
+
+  ```java
+  String str1 = new String(new char[]{'J', 'a', 'v', 'a'});
+  String str2 = String.valueOf(new char[]{'J', 'a', 'v', 'a'});
+  ```
+
++ `String` 类提供几个 `valueOf` 静态方法，可将 `char` 、`char[]` 、`double`、`long`、`int` 和 `float` 等数值转换为字符串
+
++ 注意 `equals`
+
+  ```java
+  String s1 = "Hello";
+  String s2 = new String("Hello");
+  boolean ans = s1.equals(s2); //true
+  ```
+
++ `StringBuilder` 或 `StringBuffer` 都能存储指定容量的字符串（若超出，则自动扩大）
+
+  > 单任务访问：`StringBuilder`，多任务并发访问：`StringBuffer`
+
+  ```java
+  StringBuilder s0 = "0123"; //错误！！！！
+  System.out.println(s1.substring(0, 2)); //区间为[0,2)
+  StringBuilder s1  = new StringBuilder("0123456789");
+  s1.insert(3, "zzzz"); //第一个参数为偏移长度，故012zzzz3456789
+  s1.delete(0, 2); //区间为[0,2)
+  ```
+
+  > `trimTosize()` 能够将 `StringBuilder` 对象的容量降到实际大小
 
 # Chapter 11. 继承和多态
 
@@ -489,7 +543,9 @@ class Son extends Fa {
 
 ## final修饰符
 
-（一）**修饰两类变量**：两类被 `final` 修饰的变量，遵循着不可多次赋值或修改的原则
+（一）**修饰两类变量**：两类被 `final` 修饰的变量，必须**被初始化**，遵循着不可多次赋值或修改的原则
+
+> 注意，静态的 `final` 即 `static final`，（因为 `final` 必须要有初始化），要么在定义时初始化，要么就在静态初始化块赋值(因为 `static`)，此时就不能够在构造方法中赋值了!
 
 ```java
 class Ben {
@@ -514,6 +570,8 @@ public class Test {
     }
 }
 ```
+
+
 
 （二）**修饰方法**：对父类的某个方法声明为 `final` 类型时，子类不能够覆盖该方法，如下：
 
