--- a/_posts/人文社科/2021-06-13-马原复习.md
+++ b/_posts/人文社科/2021-06-13-马原复习.md
@@ -193,3 +193,46 @@ math: true
   2. 意识具有**创造性**
   3. 意识具有指导实践改造客观世界的作用。
   4. 意识还具有指导、控制人的行为和生理活动的作用 
+
+## ⭐物质与意识的辩证关系
+
+>  辩证关系即对立统一关系
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210618221055.png"/>
+
+> “意识是人脑的分泌物”——错误观点，将意识混淆为物质
+>
+> 物质可以“转化”意识，但不能写成“代替”
+>
+> 物质“强”一点，意识“弱”一点
+
+一方面，尊重客观规律，是正确发挥主观能动性的前提；
+
+另一方面，只有充分发挥主观能动性，才能正确认识和利用客观规律
+
+> 社会历史趋向–>规律；主体选择->能动
+
+### 人的主观能动性的三个前提及条件
+
++ 前提：从实际出发
++ 基本途径：实践
++ 还需要依赖一定的物质条件和物质手段
+
+## 世界的物质统一性原理
+
++ 世界是统一的，即世界的本原是一个
+
+  > 能够批判“二元论”，但注意，唯心主义也同意该句话
+
++ 统一性在于它的物质性，即世界统一的基础是物质
+
+  > 第一句+第二句 可以批判“唯一”，但不能够批判旧唯物主义
+
++ 物质世界的统一性是多样性的统一，而不是单一的无差别的统一
+
+  > 三句话才能够批判“旧唯物主义”
+
+## 马哲与其他哲学的区别与联系
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619003702.png" style="zoom:80%;" />
+
