Upload the Materialistic Dialectics

--- a/_posts/人文社科/2021-06-13-马原复习.md
+++ b/_posts/人文社科/2021-06-13-马原复习.md
@@ -6,7 +6,7 @@ tags: [马克思原理]
 math: true
 ---
 
-# Chap1 导论
+# Chap1. 导论
 
 ## 马克思主义构成之间的联系
 
@@ -70,7 +70,7 @@ math: true
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210613164951.png" style="zoom: 50%;" />
 
-# Chap2 唯物论
+# Chap2. 唯物论
 
 马哲：
 
@@ -166,7 +166,7 @@ math: true
   >
   > 实践不是社会发展的动力！
 
-## 意识的起源、本质和作用
+### 意识的起源、本质和作用
 
 + 意识的**概念**：意识是物质世界长期发展的产物，是人脑的机能和属性，是**物质世界的主观映象**。
 + 意识的**本质**：客观世界的主观映像，是客观内容和主观形式的统一。
@@ -232,7 +232,263 @@ math: true
 
   > 三句话才能够批判“旧唯物主义”
 
+## ⭐世界的物质统一性原理的意义
+
+1. 理论上：世界的物质统一性原理，是马克思主义的**基石**。
+2. 实际上：日常生活中要做到一切从实际出发，因为世界的物质统一性原理
+
 ## 马哲与其他哲学的区别与联系
 
 <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619003702.png" style="zoom:80%;" />
+
+**实践**是马哲区别于其他派别的独有的观点
+
+# Chap3. 辩证法
+
+> 回答的问题：世界是怎样的？——辩证法的两大总特征做出直接的回答
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619134835.png"/>
+
+## 两大总特征
+
+### 普遍联系
+
+⭐ 联系是以区别为前提的
+
+#### 联系的特点
+
++ 客观性：联系是事务本身所固有的，不是主观臆想的
++ 普遍性：
+  1. 任何事务**内部**的不同部分和要素是相互联系的，即任何事务都具有内在结构性
+  2. 任何事务都不能孤立存在的，都同**其他事物**处于一定的相互联系之中
+  3. （徐）整个世界是相互联系的统一，它就如同任何事务都是这张网的节点….而这个节点一定通过“中介”是与其他节点联系着，自己也是“中介”
++ 多样性：事物是多样的->事物的联系也是多样的
++ 条件性：
+  1. 条件对事物发展和人的活动具有支持或抑制的作用；
+  2. 条件可以改变的，人们经过努力可以…
+  3. 改变和创造条件不是任意的，必须尊重…规律
+
+### 永恒发展
+
+#### 发展的内涵
+
+概括一切形式的变化就是运动，运动变化的趋势是发展
+
+> **运动 = 变化 > 发展**，运动是绝对的、无条件的，但发展不能如此说，发展是永恒的
+
+#### 发展的实质
+
+前进上升的运动，发展的实质是新事物（合乎历史、远大前途）的产生和旧事物（丧失历史必然性、日趋灭亡）的灭亡
+
+> 注意：新事物和旧事物并不是时间的前后关系
+>
+> 但是，新事物**往往**（不是一定）产生于旧事物之后
+>
+> 新事物必然取代旧事物
+
+### 过程的观点
+
+世界不是既成事务的集合体，而是**过程**的集合体
+
+一切在历史上产生的都要在历史上灭亡
+
+创新永无止境
+
+…
+
+## 五对范畴
+
+> 进一步探讨联系和发展环节上的逻辑问题
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619141713.png"/>
+
+### 原因与结果
+
++ 原因与结果->前后相继
+
++ **关系**：对立统一
+
+  > 有其因必有其果是错误的，因为原因和结果的关系是复杂多样的，有“同因异果”，同样的原因未必导致同样的结果
+  >
+  > 有因必有果是正确的
+
++ 方法论：凡事预则立，不预则废
+
+### 必然与偶然
+
++ 这个世界上任何一个事情的发生既是必然，也是偶然，即必然与偶然的辩证统一
+
++ 关系：对立统一 
+
++ 区别：必然：内部原因、稳定、决定性，偶然：外部原因、不太稳定、影响
+
++ 联系：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619144030.png" style="zoom:67%;" />
+
+  
+
+### 可能与现实
+
++ 相互区别：略
+
++ 相互联系：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619144505.png"/>
+
++ 判别：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619145202.png" style="zoom:80%;" />
+
+### ⭐现象与本质
+
++ 只要现象，都外露于外部；而本质隐藏于事物内部
+
++ 相互区别：
+
+  <img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619145723.png"/>
+
+  > 假象是客观存在的，错觉是错误的感觉。
+  >
+  > 错觉不一定是被假象迷惑导致的
+  >
+  > 真象与假象都是客观存在的，并没有正确还是错误的说法
+
++ 方法论：不能停留于现象，**必须通过现象揭示本质**
+
+### 内容与形式
+
++ 关系：上面四对范畴都是对立统一，而这对是相互依赖、不可分割
+
++ 任何 … 都有 … ； 没有无 … 的 …
+
++ 内容决定形式，形式反作用于内容；当形式适合内容，对内容的发展有…积极推动作用 … ；…不适合 …消极
+
+  > 生产力就是内容；生产关系就是形式
+
+## 三大规律
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619151908.png"/>
+
+##  ⭐⭐对立统一规律
+
+### 唯物辩证法的实质与核心——对立统一规律
+
+1. 对立统一规律揭示了事务普遍联系的根本内容和永恒发展的内在动力，从根本上回答了事务为什么会发展的问题的问题
+2. 对立统一规律是贯穿其他规律和范畴的中心线索
+3. 对立统一规律提供矛盾分析法，它是对事物辩证认识的实质
+4. 是否承认对立统一学说是唯物辩证法和形而上学对立的本质
+
+### 矛盾的同一性和斗争性的辩证关系原理
+
+矛盾就是对立统一，对立统一就是矛盾
+
+> 每时每刻，每对矛盾既同一又斗争
+
+哲学上的矛盾并非有褒贬之义
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619153944.png"/>
+
+> 只要是矛盾，都可以转
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619154154.png"/>
+
+> 资本主义 -> 对抗性矛盾 -> 灭亡
+
+同一性与斗争性的关系：对立统一
+
+联系：没有…没有 … ；… 寓于 … （拾荒者例子）
+
+区别：斗争性是无条件、绝对的；同一性是有条件、相对的
+
+**方法论**：“看问题要一分为二”、“求同存异”、“事物之间会相互转化”、“批判地继承”
+
+### 矛盾的同一性和斗争性在事物发展中的作用原理
+
+同一性：
+
+1. 由于矛盾双方相互依存，互为存在的条件， 矛盾双方可以利用对方的发展使得自己得到发展（首富）
+2. 同一性使矛盾双方相互**吸取**有利于自身的因素，在相互作用中各自得到发展（成功的爱情）
+3. 由于矛盾双方彼此相通，矛盾双方可以向着彼此的对立面转化而得到发展，并规定着事物的发展方向。（你强我弱->我弱你强）
+
+矛盾性：
+
+1. 矛盾双方的斗争促进矛盾双方力量的变化，竞长争高，此消彼长，造成事物的量变
+2. 矛盾双方的斗争，促使矛盾双方的地位和性质发生转化，实现事物的质变。
+
+方法论：
+
++ 事物的发展不仅表现在“相反相成”（斗争性多的时候），而且表现为“相辅相成”（同一性多的时候）；
+
++ 学会从事物的对立面把握事物的统一，逆向思考。
+
++ 和谐不是无差别的一致
+
+### 矛盾的普遍性和特殊性的辩证关系原理
+
+普遍性概念：大概就是 矛盾无处不在，无时不有，旧的矛盾解决了，新的矛盾又产生
+
+特殊性概念：在各个方法都有其特点，有三种情形：
+
++ **不同**事物的矛盾各有其特点
++ 同一事物的矛盾在不同发展过程和发展**阶段**各有其不同的特点
++ 构成事物的诸多矛盾以及每一矛盾的不同方面各有不同的性质、地位和作用
+
+关系：对立统一
+
+区别：普遍性（共性）无条件的、绝对的，（特殊性）个性 … 、…
+
+联系：任何现实存在的事物都是共性和个性的有机统一，没有 … 的 … 
+
+方法论：**具体问题具体分析**，对症下药
+
+> 美国：抽象人权；中：具体人权
+
+### 矛盾的不平衡发展原理
+
+概念：
+
++ 主要矛盾是矛盾体系中处于支配地位，对事物发展起决定作用的矛盾。次要矛盾是处于服从地位的矛盾。
+
++ 在每一对矛盾中又有矛盾的主要方面与矛盾的次要方面
+
+  > 丈夫与夫妻是一对矛盾，有一个居于矛盾的主要方面，起着领导作用
+
+原理：事务的性质主要由**主要矛盾**的**主要方面**决定的
+
+方法论意义：“两点论”（即主次都不要放弃）与“重点论”（突出主要矛盾）相结合，抓关键，看主流
+
+### 矛盾分析法
+
+> 即上述的方法论的总结
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619165824.png"/>
+
+## 质量互变定律
+
++ 质：认识“质”是认识和实践的起点和基础
++ 量：认识事物的“量”是认识的深化和精确化，只有正确了解才能正确估计事物在实践中的**地位和作用**
+
++ 度：度的两端叫关节点或临界点
++ 量变：事物数量的增减和次序的变动（别漏了），保持稳定性的**不显著**的变化
++ 质变：事物性质的**根本**变化
+
+相互联系：
+
+1. 量变是质变的**必要**准备
+
+   > 激变论夸大了质变，否定了量变
+
+2. 质变是量变的**必然**结果
+
+   > 庸俗进化论，夸大了量变
+
+3. 两者相互渗透
+
+   + 总的量变中有阶段性和局部性的部分质变
+   + 质变中也有旧质在量上的收缩和新质在量上的扩张 
+
+<img src="https://gitee.com/j__strawhat/MyImages/raw/master/20210619172340.png" style="zoom:80%;" />
+
+## 否定之否定规律
 
